--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Starter</title>
+    <title>Dog Facts</title>
+    <link rel="icon" href=
+      "https://cdn-icons-png.flaticon.com/512/1998/1998627.png"
+          type="image/x-icon">
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -11,6 +14,7 @@
     />
 
     <!-- styles -->
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
